src/styles/globals.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background-color: var(--background);
}

:root {
  --font-inter: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
  --font-jetbrains: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    'Liberation Mono', 'Courier New', monospace;
  --text-base: 1.6rem;
  --text-sm: 1.4rem;
  --text-xs: 1.2rem;
  --text-lg: 1.9rem;
  --title-lg: 2.4rem;
  --title-md: 2rem;
  --title-sm: 1.6rem;
  --line-base: 1.6;
  --line-tight: 1.25;
  --background: #f8f9fa;
  --background-card: #fff;
  --background-sidebar: #f0f2f5;
  --background-sidebar-rgb: 240, 242, 245;
  --background-sidebar-item: #e5e7eb;
  --background-sidebar-item-hover: #d6d9de;

  --light-blue: #007aff;
  --light-blue-hover: #005bb5;

  --gray-signOut: #666;
  --gray-signOut-hover: #444;
  --light-gray: #d1d5db;
  --light-gray-lines: #c4c8cc;
  --light-gray-notes: #888;
  --gray-notes: #555;
  --dark-gray: #222;

  --event-border: #666;
  --date-badge-border: #666;
  --text-border-bottom: #bbb;
  --timeago: rgb(20, 140, 10);

  --border-card: var(--light-gray);

  --athlete-name: var(--gray-notes);
  --sidebar-icon: var(--light-gray-notes);

  --orange-strava: #fc5200;
  --start-gradient-color: #ff5733;
  --end-gradient-color: #fdb927;

  --card-box-shadow: rgba(0, 0, 0, 0.4);
  --errorContainer: whitesmoke;

  --stat-icon: #8257e5;

  --table-head-text: #fff;
  --equipment-row-background: var(--light-gray-lines);
  --footer-icon-hover: var(--orange-strava);
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }

  :root {
    --background: #121212;
    --border-card: #2e3238;
    --background-card: #1e1e1e;
    --background-sidebar: #2a2f3b;
    --background-sidebar-rgb: 42, 47, 59;
    --background-sidebar-item: #282c34;
    --background-sidebar-item-hover: #343a40;

    --dark-gray: #f0f0f0;
    --gray-notes: #d0d4da;
    --light-gray-lines: #9aa3ad;
    --light-gray-notes: #aab2bb;

    --gray-signOut: #bbb;
    --gray-signOut-hover: #ddd;

    --athlete-name: #ffffff;
    --sidebar-icon: #ffffff;

    --card-box-shadow: rgba(0, 0, 0, 0.2);
    --errorContainer: var(--background-card);

    --timeago: rgb(140, 220, 80);

    --table-head-text: var(--background-card);
    --equipment-row-background: #262a30;
    --footer-icon-hover: var(--end-gradient-color);
  }
}

@media (max-width: 1080px) {
  html {
    font-size: 93.75%;
  }
}

@media (max-width: 720px) {
  html {
    font-size: 87.5%;
  }
}

@media (max-width: 420px) {
  html {
    font-size: 81.25%;
  }
}

@media (max-width: 380px) {
  html {
    font-size: 78%;
  }
}

body {
  font: 400 var(--text-base) var(--font-inter), sans-serif;
  overflow-y: auto;
}

button {
  cursor: pointer;
}

a {
  color: inherit;
  text-decoration: none;
}

